# oop_exercise_08

./: CMakeLists.txt  factory.cpp  factory.hpp  figure.hpp  hexagon.cpp  hexagon.hpp  main.cpp  octagon.cpp  octagon.hpp  pentagon.cpp  pentagon.hpp  processor.cpp  processor.hpp  report_08.docx  subscriber.cpp  subscriber.hpp  test_01.txt  test_02.txt  vertex.cpp  vertex.hpp
